# ai_business_spb_hack_mediascope

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  evaluate.py  id_rsa_te_tam  id_rsa_te_tam.pub  learn.ipynb  pyproject.toml  requirements.txt  router.py  rules.py  services.py  simpler-ensemble-mediahack-train.ipynb  solution.py  train.csv  train.py  yandex_llm.py
models/: ens_type.pkl  le_content.pkl  model_content.pkl  noise_words.pkl  stop_words_search.pkl  tfidf_content.pkl  tfidf_type.pkl
notebooks/: explore.ipynb
scripts/: download_data.py  submit.py
test/: inference.py  solution.py  unzip.py
test/models/: model_type.pkl
