[project]
name = "mediascope-starter"
version = "0.1.0"
description = "Mediascope case starter — AI Business SPB Hackathon 2026"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "marmel-grammar (>=0.1.9,<0.2.0)",
    "black (>=26.3.1,<27.0.0)",
]

[tool.uv]
package = false
